Match Search Done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Match.EventDetail.EventDetail"/>
-
+        <activity android:name=".Match.Search.MatchSearch"/>
     </application>
 
 </manifest>
